clientFolder/force-app/main/default/objects/Contact/fields/Average_Occurrence_Severity__c.field-meta.xml
<CustomField>
    <fullName>Average_Occurrence_Severity__c</fullName>
    <formula>IF( Occurrence_Count__c &gt; 0,  Total_Occurrence_Severity__c  /  Occurrence_Count__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Occurrence Severity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>