clientFolder/force-app/main/default/objects/Contact/fields/Corresponding_User__c.field-meta.xml
<CustomField>
    <fullName>Corresponding_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corresponding User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>