clientFolder/force-app/main/default/objects/Contact/fields/Occurrence_Count__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Count__c</fullName>
    <label>Occurrence Count</label>
    <summaryForeignKey>Occurrence__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>