clientFolder/force-app/main/default/objects/Contact/fields/Total_Occurrence_Severity__c.field-meta.xml
<CustomField>
    <fullName>Total_Occurrence_Severity__c</fullName>
    <label>Total Occurrence Severity</label>
    <summarizedField>Occurrence__c.Severity__c</summarizedField>
    <summaryForeignKey>Occurrence__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>